Fix CTA button contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,6 +67,6 @@ td {
   vertical-align: top;
 }
 
-a {
+a:not([class]) {
   color: inherit;
 }
